--- a/Project-2  self intro website/index.html
+++ b/Project-2  self intro website/index.html
@@ -49,7 +49,7 @@
                     <img src="./Hot momos.jpg" alt="Hot momo">
                 </div>
                 <div class="Momos-challange">
-                    <h3>Momo Momos-challange</h3>
+                    <h3>Momos-challange</h3>
                     <p>
                         But my best skill is actually in eating hot momos. I am the undisputed queen of hot momos challenges.
                     </p>
